--- a/src/app/categories/subcategories-table/subcategories-table.html
+++ b/src/app/categories/subcategories-table/subcategories-table.html
@@ -106,7 +106,9 @@
                         }
                         <th class="font-thin p-4">{{subcategoria.estatus}}</th>
                         <th class="font-thin p-4">
-                            <i class='bx  bx-pencil text-[#46E24D]'  ></i> 
+                            <button (click)="notifyOpenEditModalSubcategoria(subcategoria)">
+                                <i class='bx  bx-pencil text-[#46E24D]'  ></i> 
+                            </button>
                         </th>
                     </tr>
                 }
