--- a/src/app/persons/persons.css
+++ b/src/app/persons/persons.css
@@ -44,3 +44,34 @@
     opacity: 1;
     transform: scale(1);
 }
+
+.modal-edit {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-container-edit {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 500px;
+    height: auto;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0.02);
+    transition: all 0.20s ease;
+}
+
+.animate-edit {
+    opacity: 1;
+    transform: scale(1);
+}
