Cambios Generales en la app, de diseño

--- a/src/app/account/profiles-account/profiles-account.html
+++ b/src/app/account/profiles-account/profiles-account.html
@@ -29,9 +29,9 @@
             <p class="font-semibold text-[#46E24D]">{{numeroPerfiles}}</p>
         </div>
         <!-- Tabla de los perfiles del usuario -->
-        <section class="w-full max-h-68 overflow-auto text-white border border-[#3B3B3B] rounded-lg">
+        <section class="w-full max-h-68 overflow-auto overscroll-none text-white border border-[#3B3B3B] rounded-lg">
             <table class="w-full border-collapse">
-                <thead class="bg-[#151515]">
+                <thead class="bg-[#151515] sticky top-0 z-20">
                     <tr>
                         <th class="p-3 text-center font-light">Icono</th>
                         <th class="p-3 text-center font-light">Nombre del perfil</th>
