--- a/src/app/profiles-selector/profiles-selector.html
+++ b/src/app/profiles-selector/profiles-selector.html
@@ -1,7 +1,7 @@
 <main class="w-screen h-screen overflow-y-auto lg:overflow-hidden">
-    <div class="fade-in h-full flex flex-col items-center justify-center gap-10">
-        <h2 class="text-white text-5xl font-medium">Seleccione un perfil para entrar a Finnancer</h2>
-        <section class="flex flex-col lg:flex-row w-full overflow-x-auto gap-10 items-center justify-center">
+    <div class="fade-in h-full flex flex-col items-center justify-center gap-10 p-6 md:p-2">
+        <h2 class="text-white text-3xl text-center lg:text-5xl lg:text-start font-medium">Seleccione un perfil para entrar a Finnancer</h2>
+        <section class="flex flex-col lg:flex-row w-auto lg:w-full overflow-x-auto gap-10 items-center justify-center">
             @for(perfil of perfiles; track perfil.id_perfil) {
                 <div class="slide-in-up text-white flex flex-col items-center justify-between gap-3 w-56 min-h-70 bg-gradient-gray-v rounded-3xl p-5">
                     <p><i [class]="icons[+perfil.icono]" class="bg-[#46E24D] rounded-full p-5 text-black text-2xl"></i></p>
