--- a/src/app/transactions/transactions.css
+++ b/src/app/transactions/transactions.css
@@ -105,7 +105,7 @@
 }
 
 @media (max-width: 768px) {
-    .modal-container {
+    .modal-container, .modal-edit-container {
         width: 100%;
         height: 100%;
         padding: 15px;
