--- a/src/app/transactions/transactions.html
+++ b/src/app/transactions/transactions.html
@@ -531,7 +531,7 @@
                     <!-- Línea divisora -->
                     <span class="bg-gray-200 w-full h-0.5"></span>
 
-                    <section class="md:rounded-t-2xl overscroll-none overflow-auto w-full">
+                    <section class="md:rounded-t-2xl overscroll-none overflow-x-auto w-full">
                         <table class="w-full text-center">
                             <thead class="text-black">
                                 <tr class="bg-zinc-200">
