--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -5,7 +5,7 @@
         <button (click)="goToTransactions()" class="menu rounded-full py-4 px-6 text-white font-thin">Transacciones</button>
         <button (click)="goToCategories()" class="menu rounded-full py-4 px-6 text-white font-thin">Categorías</button>
         <button (click)="goToPersons()" class="menu rounded-full py-4 px-6 text-white font-thin">Clientes y Proveedores</button>
-        <button class="menu rounded-full py-4 px-6 text-white font-thin">Balance</button>
+        <button (click)="goToBalance()" class="menu rounded-full py-4 px-6 text-white font-thin">Balance</button>
     </header>
     <!-- Header que aparece en móviles -->
     <header class="mobile-header flex flex-row relative w-full items-center justify-between p-5 z-50">
@@ -51,7 +51,9 @@
                     Clientes y Proveedores
                     <i class='bx  bx-move-vertical bx-rotate-90 text-xl'    ></i> 
                 </li>
-                <li class="flex items-center justify-center gap-2">
+                <li class="flex items-center justify-center gap-2"
+                    routerLink="/balance"
+                    >
                     Balance
                     <i class='bx  bx-book text-xl'  ></i>
                 </li>
