Se integró la primera parte de recuperar contraseña.

--- a/src/app/auth-page/login/login.html
+++ b/src/app/auth-page/login/login.html
@@ -47,7 +47,7 @@
             type="submit"
             [disabled]="!form.valid"
             class="flex items-start justify-center font-bold w-80 h-auto p-3 rounded-lg lg:rounded-xl
-                    bg-green-400 m-4 slide-in-down-2 card"
+                    bg-green-400 m-4 slide-in-down-2 card disabled:opacity-50"
         >
             Iniciar Sesión
         </button>
