--- a/src/app/verify-mail/verify-mail.html
+++ b/src/app/verify-mail/verify-mail.html
@@ -19,6 +19,7 @@
                 bg-green-400">
         Validar Código
       </button>
+      <p class="text-red-500">{{mensajeError}}</p>
     
       <div class="flex flex-col gap-2 items-center justify-center mt-2">
         <p>¿No recibió el correo?</p>
