--- a/src/app/auth-page/register/register.html
+++ b/src/app/auth-page/register/register.html
@@ -66,7 +66,7 @@
             type="submit"
             [disabled]="!formSignUp.valid"
             class="card items-start justify-center font-bold w-80 h-auto p-3 rounded-lg 
-                bg-green-400 m-4 slide-in-down-2"
+                bg-green-400 m-4 slide-in-down-2 disabled:opacity-50"
         >
             Crear Cuenta
         </button>
