Se implementó la funcionalidad de recuperar la contraseña del usuario.

--- a/src/app/auth-page/login/login.html
+++ b/src/app/auth-page/login/login.html
@@ -34,11 +34,7 @@
                 <small class="text-red-600 ml-2">La contraseña es obligatoria y debe tener al menos 8 caracteres</small>
             }
         </div>
-        <div class="flex items-center justify-between w-full slide-in-down-2">
-            <div class="flex gap-2 justify-start items-center">
-                <input type="checkbox">
-                <p>Recordarme</p>
-            </div>
+        <div class="flex items-center justify-end w-full slide-in-down-2">
             <nav>
                 <a routerLink="restorePassw" class="text-green-400">¿Olvidó su contraseña?</a>
             </nav>
